examples/good/07-LotsOfArgs.tms
int x(int a, int @b, int @c, int d, int e, int @f) {
  b++;
  return a+b+c+d+e+f;
}

void main() {

  int b = 1;
  int c = 2;
  int e = 3;
  int f = -2;

  int z = x(2, b, c, 3, e, f);

  printBool(z == 10);

  return;
}
