examples/bad/03-AssignWithourDecl.tms
void main () {
  x = 10 * 5;
  return;
}